Fix paddings and content visibility issues on reference page

--- a/content/themes/dude/sass/layout/_hero-reference.scss
+++ b/content/themes/dude/sass/layout/_hero-reference.scss
@@ -47,3 +47,7 @@ body .block-hero-person {
     @extend %h2;
   }
 }
+
+body .block.block-hero-reference {
+  padding-bottom: 0;
+}
