--- a/content/themes/dude/sass/views/_single.scss
+++ b/content/themes/dude/sass/views/_single.scss
@@ -27,6 +27,33 @@
   margin-top: -15rem;
   background: transparent;
 
+  &.block-single-reference {
+    margin-top: 0;
+    padding-left: $padding-default-cols;
+    padding-right: $padding-default-cols;
+    padding-top: $padding-default-rows;
+    padding-bottom: $padding-default-rows;
+
+    @media (max-width: $container-ipad) {
+      padding-left: $padding-default-cols-ipad;
+      padding-right: $padding-default-cols-ipad;
+      padding-top: $padding-default-rows-ipad;
+      padding-bottom: $padding-default-rows-ipad;
+    }
+
+    @media (max-width: $container-mobile) {
+      padding-left: $padding-default-cols-mobile;
+      padding-right: $padding-default-cols-mobile;
+      padding-top: $padding-default-rows-mobile;
+      padding-bottom: $padding-default-rows-mobile;
+    }
+
+    .entry-content {
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+  }
+
   .container {
     padding-top: 0;
     padding-left: 0;
@@ -167,16 +194,6 @@
   &.block-single-reference .entry-content .wp-block-image {
     margin-top: 8rem;
     margin-bottom: 8rem;
-  }
-
-  &.block-single-reference {
-    margin-bottom: 0;
-    padding-bottom: 0;
-
-    .container {
-      margin-bottom: 0;
-      padding-bottom: 0;
-    }
   }
 
   .entry-content {
